# kat-boot

./: CMakeLists.txt  KatBootConfig.toml  README.md  main.cpp
.github/workflows/: build.yml
modules/CertManager/: CertManager.cpp  CertManager.h
modules/ConfigManager/: ConfigManager.cpp  ConfigManager.h
modules/UpdateManager/: UpdateManager.cpp  UpdateManager.h
modules/Utils/: httplib.h  toml.h
